--- a/docs/1.3梯度下降的原理.md
+++ b/docs/1.3梯度下降的原理.md
@@ -1,7 +1,5 @@
 ---
-layout: post
-title: '1.3 梯度下降法：優化的核心'
-categories: 'AI'
+title: '1.3 梯度下降的原理'
 description:
 keywords: machine learning ntu
 ---
