--- a/docs/1.基礎概念/1.1迴歸分析.md
+++ b/docs/1.基礎概念/1.1迴歸分析.md
@@ -1,10 +1,13 @@
 ---
 title: '1.1 迴歸分析'
-description: ''
+description: 'ML Lecture 1: Regression - case study'
 keywords: machine learning ntu
+tags:
+    - 基礎概念
+    - 李宏毅
 ---
 
-## Regression
+# ML Lecture 1: Regression - case study
 機器學習要做的事情就是找出一個函數，而迴歸模型顧名思義就是要預測一個連續性的數值。或者說我們找到的函數，它的輸出是一個數值，這類型的任務就稱為迴歸。
 
 ![](https://i.imgur.com/6cDnDgp.png)
