--- a/docs/1.基礎概念/1.2探索誤差的來源.md
+++ b/docs/1.基礎概念/1.2探索誤差的來源.md
@@ -1,7 +1,10 @@
 ---
 title: '1.2 探索誤差的來源'
-description: ''
+description: 'ML Lecture 2: Where does the error come from?'
 keywords: machine learning ntu
+tags:
+    - 基礎概念
+    - 李宏毅
 ---
 
 # ML Lecture 2: Where does the error come from?
