--- a/docs/1.基礎概念/1.5邏輯迴歸.md
+++ b/docs/1.基礎概念/1.5邏輯迴歸.md
@@ -1,9 +1,13 @@
 ---
 title: '1.5 邏輯迴歸'
-description:
+description: 'ML Leture 5: Logistic Regression'
 keywords: machine learning ntu
+tags:
+    - 基礎概念
+    - 李宏毅
 ---
 
+# ML Leture 5: Logistic Regression
 ## 回顧
 上一節課最後有提到，我們要找一個機率 posterior probability，當機率 P(X1|x) 大於 0.5 則輸出 C1 反之 C2。如果採用的是 Gaussian 機率分佈，我們可以說這個 posterior probability 就是 𝜎(𝑧)。而 z=w⋅x+b 當採用其它的機率分佈的話，最終得到的結果也是差不多的。 下標 w,b 代表這個 function set 是取決於 w,b 他們是透過訓練得到的一組參數，不同的 w,b 就會得到不同的 function。於是我們可以說 fw,b(x) 即為 posteriror probability。
 
