--- a/docs/2.1深度學習簡介.md
+++ b/docs/2.1深度學習簡介.md
@@ -4,7 +4,7 @@ description:
 keywords: Deep Learning 
 ---
 
-## 前言
+# ML Lecture 6: Brief Introduction of Deep Learning
 深度學習是一種機器學習的方法。它藉由模仿人類大腦神經元的結構，定義解決問題的函式。所謂深度學習是一種具有深度多層的神經網路。機器可以自行學習並且理解機器學習時用以表示資料的「特徵」，因此又稱為「特徵表達學習」，其應用包括：影像分類、機器翻譯...等。
 
 ![](https://ithelp.ithome.com.tw/upload/images/20210921/20107247LthVZkdrnv.png)
