--- a/docs/1.基礎概念/1.3梯度下降的原理.md
+++ b/docs/1.基礎概念/1.3梯度下降的原理.md
@@ -1,9 +1,13 @@
 ---
 title: '1.3 梯度下降的原理'
-description:
+description: 'ML Lecture 3-1: Gradient Descent'
 keywords: machine learning ntu
+tags:
+    - 基礎概念
+    - 李宏毅
 ---
 
+# ML Lecture 3-1: Gradient Descent
 ## 回顧 Gradient Descent
 在機器學習第三個步驟，我們要找一個最好的 function，是要解一個 optimization 的問題。也就是我們在第二步我們先定義 loss function。目的是要找一組參數讓這個 loss function 越小越好。我們可以採用 Gradient Descent，假設現在 θ 是一個參數的集合。做法是隨機選一組起始的參數值，減去 learning rate 乘上 loss function 對 θ 的偏微分，就可以得到下一組 θ。
 
