--- a/docs/2.深度神經網路/2.1深度學習簡介.md
+++ b/docs/2.深度神經網路/2.1深度學習簡介.md
@@ -1,7 +1,10 @@
 ---
 title: '2.1 深度學習簡介'
-description:
-keywords: Deep Learning 
+description: 'ML Lecture 6: Brief Introduction of Deep Learning'
+keywords: machine learning ntu
+tags:
+    - 深度神經網路
+    - 李宏毅
 ---
 
 # ML Lecture 6: Brief Introduction of Deep Learning
