--- a/docs/1.基礎概念/1.1迴歸分析.md
+++ b/docs/1.基礎概念/1.1迴歸分析.md
@@ -8,6 +8,9 @@ tags:
 ---
 
 # ML Lecture 1: Regression - case study
+🎥 [觀看影片](https://www.youtube.com/watch?v=fegAeph9UaA&list=PLJV_el3uVTsPy9oCRY30oBPNLCo89yu49&index=3)  
+📄 [下載簡報](https://speech.ee.ntu.edu.tw/~tlkagk/courses/ML_2017/Lecture/Regression.pdf)
+
 機器學習要做的事情就是找出一個函數，而迴歸模型顧名思義就是要預測一個連續性的數值。或者說我們找到的函數，它的輸出是一個數值，這類型的任務就稱為迴歸。
 
 ![](https://i.imgur.com/6cDnDgp.png)
