--- a/docs/1.基礎概念/1.2探索誤差的來源.md
+++ b/docs/1.基礎概念/1.2探索誤差的來源.md
@@ -9,6 +9,10 @@ tags:
 
 # ML Lecture 2: Where does the error come from?
 
+🎥 [觀看影片](https://www.youtube.com/watch?v=D_S6y0Jm6dQ&list=PLJV_el3uVTsPy9oCRY30oBPNLCo89yu49&index=5)  
+📄 [下載簡報](https://speech.ee.ntu.edu.tw/~tlkagk/courses/ML_2016/Lecture/Bias%20and%20Variance%20(v2).pdf)
+
+
 ## 誤差的主要來源
 在機器學習中，誤差（Error）主要來自兩個來源：
 
@@ -194,7 +198,7 @@ $$
 
 3.**正則化（Regularization）**：簡單來說就是避免模型太複雜，可以在 Loss Function 中加入正則化項，限制模型的過度擬合。正則化會讓模型變得更平滑，減少無效區域的出現，從而降低 Variance。以下是有無使用正則化的對比圖：
 
-![Regularization 對比](https://i.imgur.com/vUBIug2.png)
+![Regularization 對比](./image/img1.2.13.png)
 
 !!! note
 
