--- a/docs/1.基礎概念/1.4分類問題.md
+++ b/docs/1.基礎概念/1.4分類問題.md
@@ -8,6 +8,9 @@ tags:
 ---
 
 # ML Lecture 4: Classification
+🎥 [觀看影片](https://www.youtube.com/watch?v=fZAZUYEeIMg&list=PLJV_el3uVTsPy9oCRY30oBPNLCo89yu49&index=9)  
+📄 [下載簡報](https://speech.ee.ntu.edu.tw/~tlkagk/courses/ML_2016/Lecture/Classification%20(v3).pdf)
+
 ## 分類的應用
 在分類問題中我們一樣要找到一個 function。當輸入 X 特徵，模型必須輸出相對應的類別。分類的問題在現實生活中有相當多的案例，例如在金融行業上可以使用分類模型來決定是否要通過某人的貸款申請。或者是在醫療診斷上面，透過某一個病人的症狀、年紀、性別……等來預測他是罹患哪一種疾病。或者在影像識別方面可以辨識手寫數字或是中文手寫辨識。
 
