--- a/docs/1.基礎概念/1.5邏輯迴歸.md
+++ b/docs/1.基礎概念/1.5邏輯迴歸.md
@@ -8,6 +8,9 @@ tags:
 ---
 
 # ML Leture 5: Logistic Regression
+🎥 [觀看影片](https://www.youtube.com/watch?v=hSXFuypLukA&list=PLJV_el3uVTsPy9oCRY30oBPNLCo89yu49&index=10)  
+📄 [下載簡報](https://speech.ee.ntu.edu.tw/~tlkagk/courses/ML_2016/Lecture/Logistic%20Regression%20(v3).pdf)
+
 ## 回顧
 上一節課最後有提到，我們要找一個機率 posterior probability，當機率 P(X1|x) 大於 0.5 則輸出 C1 反之 C2。如果採用的是 Gaussian 機率分佈，我們可以說這個 posterior probability 就是 𝜎(𝑧)。而 z=w⋅x+b 當採用其它的機率分佈的話，最終得到的結果也是差不多的。 下標 w,b 代表這個 function set 是取決於 w,b 他們是透過訓練得到的一組參數，不同的 w,b 就會得到不同的 function。於是我們可以說 fw,b(x) 即為 posteriror probability。
 
