add code block setting

--- a/docs/1.基礎概念/1.2探索誤差的來源.md
+++ b/docs/1.基礎概念/1.2探索誤差的來源.md
@@ -200,6 +200,10 @@ $$
 
 ![Regularization 對比](./image/img1.2.13.png)
 
+4.**提前停止（Early Stopping）**：當訓練過程中模型的誤差不再改善時，可以設置一個停止標準來提前終止訓練，避免模型學習到過多無用的細節。
+
+5.**整體學習（Ensemble Learning）**：透過訓練多個模型，並將每個模型的預測結果平均來獲取最終的預測，這有助於提升模型的泛化能力並降低過擬合的風險。
+
 !!! note
 
     雖然正則化可以減少 Variance，但也可能會稍微增加 Bias，因為模型被限制後，可能無法完全擬合某些複雜模式。
